# IMEModifier

./: CMakeLists.txt  InputMethodModifier.json.in  README.md  ime_manager.cpp  ime_manager.h  ime_modifier.cpp  ime_modifier.h  ime_modifier_constants.h  imemodifier.json.in  inputmethodmodifier.cpp  inputmethodmodifier.h  inputmethodmodifier_global.h  inputmethodmodifierconstants.h
.github/workflows/: build_cmake.yml
